<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">appymeteo</string>
    <string name="version">Versione 0.3.4</string>
    <string name="app_id">405414319576008</string>
    <string name="fake"></string>
    <string name="caricamento">Caricamento contenuti</string>
    <string name="information_page">info</string>
    <string name="happy_meteo">my meteo</string>
    <string name="happy_context">contesto</string>
    <string name="happy_map">mappa</string>
    <string name="logout">logout</string>
    <string name="begin_questions">Il momento delle domande!</string>
    <string name="select_gender">Seleziona il sesso</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="select_age">Seleziona l\'et\u00E0</string>
    <string name="agelist1">15&#8211;24 anni</string>
    <string name="agelist2">25&#8211;35</string>
    <string name="agelist3">35&#8211;50</string>
    <string name="agelist4">over 50</string>
    <string name="select_education">Seleziona il titolo di istruzione</string>
    <string name="educationlist1">Scuola Primaria</string>
    <string name="educationlist2">Diploma</string>
    <string name="educationlist3">Laurea</string>
    <string name="select_work">Seleziona la tua condizione lavorativa</string>
    <string name="worklist1">Disoccupato</string>
    <string name="worklist2">Impiegato fisso</string>
    <string name="worklist3">Impiegato precario</string>
    <string name="worklist4">Libero professionista</string>
    <string name="worklist5">Pensionato</string>
    <string name="insert_email">Inserisci la tua email</string>
    <string name="insert_fist_name">Inserisci il tuo nome</string>
    <string name="insert_last_name">Inserisci il tuo cognome</string>
    <string name="insert_location">Inserisci la tua citt&#224; di residenza</string>
    <string name="insert_password">Inserisci la tua password</string>
    <string name="insert_confirm_password">Inserisci nuovamente la tua password</string>
    <string name="insert_cap">Inserisci il tuo cap</string>
    <string name="loading">Caricamento..</string>
    <string name="challenge">appygame</string>
    <string name="challenge_done">Partite fatte</string>
    <string name="titleWithApp">AMICI CHE HANNO APPYMETEO</string>
    <string name="titleNoApp">AMICI CHE NON HANNO APPYMETEO</string>
    <string name="challenge_friend_with_app">Sfida!</string>
    <string name="challenge_friend_no_app">Invita!</string>
    <string name="accept_challenge">Accetta</string>
    <string name="refuse_challenge">Rifiuta</string>
    <string name="modify_account">Modifica Profilo</string>
    <string name="link_user_to_facebook">COLLEGATI</string>
    <string name="unlink_user_to_facebook">SCOLLEGATI</string>
    <string name="today">Oggi</string>
    <string name="yesterday">Ieri</string>
    <string name="tomorrow">Domani</string>
    <string name="empty"></string>
    <string name="mail">Invia una mail..</string>
    <string name="error">Errore</string>
    <string name="error_password">Questo campo e il campo password sono diversi</string>
    <string name="insert_old_password">Inserisci la tua vecchia password</string>
    <string name="insert_new_password">Inserisci la tua nuova password</string>
    <string name="change_password">Modifica password</string>
    <string name="error_captcha">Captcha sbagliato, reinserirlo</string>
    <string name="insert_captcha">Inserisci il testo dell\'immagine</string>
    <string name="are_you_sure">Sei sicuro che vuoi farlo? Questa operazione &#232; irreversibile.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="renew_captcha">Rigenera captcha</string>
    <string name="january">GENNAIO</string>
    <string name="february">FEBBRAIO</string>
    <string name="march">MARZO</string>
    <string name="april">APRILE</string>
    <string name="may">MAGGIO</string>
    <string name="june">GIUGNO</string>
    <string name="july">LUGLIO</string>
    <string name="august">AGOSTO</string>
    <string name="september">SETTEMBRE</string>
    <string name="october">OTTOBRE</string>
    <string name="november">NOVEMBRE</string>
    <string name="december">DICEMBRE</string>
    <string name="lost_password">Hai dimenticato la tua password? Inserisci la tua email e vai Avanti.</string>
    <string name="next">Avanti</string>
    <string name="cancel">Annulla</string>
    <string name="success_email">Email impostata con successo</string>
    <string name="ok">OK</string>
    <string name="error_impulse">Errore di configurazione dell\'impulso</string>
    <string name="missing_question_answer_notification_title">Manca la risposta a una domanda!</string>
	<string name="missing_question_answer_notification_msg">Prima di inviare le rispsote devi rispondere a tutte le domande!</string>
	<string name="not_confirmed_user_notification_title">Account non verificato</string>
	<string name="not_confirmed_user_notification_msg">Presto verr\u00E0 inviata una email di conferma all\'email indicata</string>
	<string name="request_challenge_notification_msg">Richiesta di gioco inviata con successo</string>
	<string name="retry">Riprova</string>
	<string name="email">Mail</string>
	<string name="facebook">Facebook</string>
	<string name="search">Cerca..</string>
	<string name="notify_domande">Il momento delle domande!</string>
	<string name="notify_gioca">Gioca con me!</string>
	<string name="notify_richiesta">L\'utente vuole giocare con te</string>
	<string name="notify_rifiuto">L\'utente non vuole giocare con te</string>
	<string name="notify_turno">E\' il tuo turno!</string>
	<string name="notify_finegioco">Il gioco \u00E9 finito!</string>
	<string name="finegioco_message">Hai giocato con [USER]!</string>
	<string name="finegioco_message_date">Hai giocato con [USER] il [DATE]!</string>
	<string name="finegioco_result">Ecco il risultato: [MYSCORE]-[YOURSCORE]</string>
	<string name="continue_to_read">Continua a leggere..</string>
	<string name="close_read">Chiudi</string>
	<string name="email_subject">Appymeteo, il meteo italiano della felicit\u00E0</string>
	<string name="email_text">Ciao, io mi sto divertendo con appymeteo, ho appena misurato la mia felicit\u00E0! Vuoi farlo anche tu?</string>
	<string name="facebook_text">Ho appena misurato la mia felicit\u00E0 con appymeteo! Scarica la app e prova anche tu!</string>
	<string name="missing_mailclient">Non ci sono mail client installati.</string>
	<string name="information1"><![CDATA[
	    <html><body>
	    Per prima cosa, vorremmo che tu sapessi che <b>stai partecipando a un progetto di ricerca scientifica</b>. 
		Lo diciamo perch\u00E9, oltre al divertimento di usare la app, stai contribuendo a qualcosa di utile per tutti. 
		Lo scopo di appymeteo \u00E9, infatti, quello di raccogliere una mole di dati 
		che coprano l\'intero territorio italiano per produrre delle previsioni meteo di felicit\u00E0 su tutto 
		il Paese. Le previsioni riguarderanno sia tu che leggi, sia l\'area geografica che ti sta intorno. 
		Il benessere soggettivo \u00E9 ormai una dimensione universalmente considerata tra le determinanti della 
		qualit\u00E0 della vita, come \u00E9 certificato anche dall\'Istat, che lo considera una delle 12 componenti del 
		BES (Benessere Equo e Sostenibile).<br/>
		Noi ci proponiamo l\'obiettivo di mappare tutta Italia attraverso una metodologia che sia coinvolgente e partecipativa. 
		Le previsioni meteo della felicit\u00E0, infatti, sono costruite sulla base di quello che tu ci dirai, e di quello che ci 
		diranno gli altri utenti. Quanto siano accurate, dipende dunque anche e soprattutto da te! 
		Vuoi vedere quanto \u00E9 felice la tua citt\u00E0? Vuoi vedere se c\'\u00E9 una zona di bassa pressione della felicit\u00E0 da cui stare al largo?  
		Nuvole di cattivo umore si addensano nel tuo futuro? Ti interessa tenere un diario della tua felicit\u00E0? 
		Vuoi confrontare la tua felicit\u00E0 con quella dei tuoi amici? Questa \u00E9 l\'app giusta per te!
		</body></html>
	]]></string>
	<string name="information2"><![CDATA[
	    <html><body>
	    <b>Come funziona</b><br/>
		Una volta iscritta/o, riceverai 4 impulsi in momenti casuali, durante la giornata. Con il minimo sforzo, 
		e in modo non invasivo, ti verr\u00E0 chiesto di rispondere a due domande  molto semplici. 
		S\u00EC, ma in parole potabili?<br/><br/>
		&#8226; Registrati / crea un account oppure registrati attraverso il tuo account Facebook<br/>
		&#8226; Divertiti, la sera, a guardare cosa ti succede intorno <br/>
		&#8226; Controlla, al mattino, se ti aspetta una giornata felice<br/>
		&#8226; Confronta la tua felicit\u00E0 con i tuoi amici invitandoli nella sezione appygame
		</body></html>
	]]></string>
	<string name="information3"><![CDATA[
	    <html><body>
	    <b>Perch\u00E9 mai dovrei fare questa scocciatura?</b><br/>
		&#8226; Te lo ripetiamo: si tratta di una ricerca scientifica e i dati serviranno a comprendere meglio cosa ti/ci rende pi\u00F9 o meno felici!<br/>
		&#8226; Innanzitutto, perch\u00E9 \u00E9 divertente<br/>
		&#8226; E poi perch\u00E9 ogni risposta ti fa guadagnare punti, cos\u00EC come invitare i tuoi amici a scaricare l\'app e giocare. E una classifica aggiornata ti dir\u00E0 dove ti posizioni. <br/><br/>
		Buon divertimento! E appymeteo!
		</body></html>
	]]></string>
	<string name="information4"><![CDATA[
	    <html><body>
	    <b>Legenda</b><br/>
		Di seguito una breve legenda che ti aiuter\u00E0 a leggere la scala dei valori di appiness!
		</body></html>
	]]></string>
	<string name="legendIconaTitle">ICONA</string>
	<string name="legendColoreTitle">COLORE</string>
	<string name="legendValoreTitle">VALORE</string>
	<string name="btn_facebook">FACEBOOK CONNECT</string>
	<string name="btn_login">LOGIN</string>
	<string name="btn_logout">LOGOUT</string>
	<string name="btn_modificadati">MODIFICA DATI UTENTE</string>
	<string name="btn_modificapw">MODIFICA PASSWORD</string>
	<string name="btn_accetta">ACCETTA</string>
	<string name="btn_rifiuta">RIFIUTA</string>
	<string name="btn_creaaccount">CREA ACCOUNT</string>
	<string name="btn_pwddimenticata">DIMENTICATA LA PASSWORD?</string>
	<string name="btn_nuovogioco">NUOVO GIOCO</string>
	<string name="alert_newversion_title">Una nuova versione di Appymeteo \u00E0 disponibile!</string>
	<string name="alert_newversion_message">Scaricala dal Google Play store per beneficiare da subito delle nuove funzionalit\u00E0!</string>
	<string name="alert_newversion_download">Scaricala</string>
</resources>