<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/side_navigation_menu_item1"
        android:icon="@drawable/icona_info"
        android:title="@string/information_page"/>
    <item
        android:id="@+id/side_navigation_menu_item2"
        android:icon="@drawable/ic_android2"
        android:title="@string/happy_meteo"/>
    <item
        android:id="@+id/side_navigation_menu_item3"
        android:icon="@drawable/icona_mappa"
        android:title="@string/happy_map"/>
    <item
        android:id="@+id/side_navigation_menu_item4"
        android:icon="@drawable/ic_android5"
        android:title="@string/challenge"/>
    <!-- item
        android:id="@+id/side_navigation_menu_item5"
        android:icon="@drawable/icona_contesto"
        android:title="@string/happy_context"/  -->

</menu>