<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="16dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/create_account_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dip" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="20dip"
                android:layout_alignParentRight="true"
                android:src="@drawable/indexlogo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/welcome_registrati" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/create_account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:hint="@string/insert_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/create_account_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:hint="@string/insert_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/create_account_fist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:hint="@string/insert_fist_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/create_account_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:hint="@string/insert_last_name"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/create_account_gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:entries="@array/genderlist"
                    android:prompt="@string/select_gender" />

                <Spinner
                    android:id="@+id/create_account_age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:entries="@array/agelist"
                    android:prompt="@string/select_age" />

                <Spinner
                    android:id="@+id/create_account_education"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:entries="@array/educationlist"
                    android:prompt="@string/select_education" />

                <Spinner
                    android:id="@+id/create_account_work"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:entries="@array/worklist"
                    android:prompt="@string/select_work" />

                <EditText
                    android:id="@+id/create_account_cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:ems="10"
                    android:hint="@string/insert_cap"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btnCreateUserFacebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:text="@string/link_user_to_facebook" />

                <Button
                    android:id="@+id/btnCreateUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:text="@string/create_profile_user" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>