<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="5dp" >

    <ImageView
        android:id="@+id/changePassword_imageCaptcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="10dip" />
    
    <EditText
        android:id="@+id/changePassword_textCaptcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:ems="10"
        android:hint="@string/insert_captcha"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/changePassword_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:ems="10"
        android:hint="@string/insert_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/changePassword_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:ems="10"
        android:hint="@string/insert_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/changePassword_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:ems="10"
        android:hint="@string/insert_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dip"
        android:text="@string/change_password" />

</LinearLayout>